# reddit-place-clone

./: .env.example  .gitignore  .gitmodules  Makefile  docker-compose.yaml  server.go
cmd/place/: place.go
nginx/: Dockerfile  nginx.conf  place.nginx
nginx/web/: desktop.css  desktop.html  glwindow.js  holdup.html  main.js  place.js
server/: .env.example  .gitignore  Cargo.toml  Dockerfile  go.mod  main.ts  package-lock.json  package.json  server.go
server/src/: helper.rs  main.rs
web/: desktop.css  place.js
web/root/: desktop.html  main.js
