[package]
name = "rplace_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.7.5", features = ["ws"] }
tokio = { version = "1.38.0", features = [
    # core features
    "rt",
    "rt-multi-thread",
    "macros",

    # external requirements
    "time",
    "sync",
    "signal",
    "fs",
    "net",
] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
lazy_static = "1.5.0"
clap = { version = "4", features = ["derive"] }
image = "0.25.1"
futures-util = "0"
dashmap = "6.1.0"
uuid = { version = "1.17.0", features = ["v4"] }
